# xhs-recipe

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  architecture.md  pyproject.toml
.cargo/: audit.toml  config.toml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/models/: Cargo.toml
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: lib.rs  render.rs  save.rs
crates/sources/: Cargo.toml
crates/sources/src/: base.rs  lib.rs
crates/sources/src/xiaohongshu/: auth.rs  mod.rs  scraper.rs  url.rs
crates/textifier/: Cargo.toml
crates/textifier/src/: lib.rs
crates/xhs-recipe/: Cargo.toml
crates/xhs-recipe/src/: analyzer.rs  lib.rs  textifier.rs
crates/xhs-recipe/src/presentation/: render.rs  save.rs
crates/xhs-recipe/src/sources/: base.rs  mod.rs
crates/xhs-recipe/src/sources/xiaohongshu/: mod.rs
scripts/: fetch_raw.py  login.py  logout.py  transcribe.py
server/: Cargo.toml
server/src/: error.rs  main.rs  routes.rs  splitter.rs
src/: analyzer.rs  lib.rs  main.rs  models.rs  pipeline.rs  textifier.rs
src/presentation/: render.rs  save.rs
src/sources/: mod.rs
src/sources/xiaohongshu/: auth.rs  mod.rs  scraper.rs  url.rs
src/storage/: local.rs  mod.rs
src/xhs_recipe/: cli.py  login.py  models.py  pipeline.py  presentation.py  recipe_extractor.py  textifier.py  transcriber.py  xhs_fetcher.py
src/xhs_recipe/analyzers/: __init__.py  recipe.py
src/xhs_recipe/sources/: __init__.py  base.py
src/xhs_recipe/sources/xiaohongshu/: __init__.py  auth.py  scraper.py  url.py
tauri-app/: .gitignore  design.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
tauri-app/src/: App.tsx  index.css  main.js  main.tsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  main.rs
tauri-app/src/components/common/: EmptyState.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  SkeletonCard.tsx
tauri-app/src/components/detail/: CookingInfoBar.tsx  CookingTimer.tsx  FrameGallery.tsx  HeroSection.tsx  IngredientList.tsx  RecipeDetail.tsx  RecipeTags.tsx  StepList.tsx  StepTimeline.tsx  StickyFooter.tsx  TipList.tsx
tauri-app/src/components/home/: ExtractSection.tsx  HomePage.tsx  RecipeCard.tsx  RecipeList.tsx
tauri-app/src/components/inspire/: AiRefineButton.tsx  GeneratingView.tsx  ProgressIndicator.tsx  RawTextCollapsible.tsx  RecipeEditor.tsx  TheBridgeCard.tsx  UrlInputBar.tsx
tauri-app/src/components/layout/: AppLayout.tsx  NavBar.tsx  TabBar.tsx
tauri-app/src/components/settings/: CookieManager.tsx  PrerequisiteCheck.tsx  SettingsPage.tsx
tauri-app/src/hooks/: useExtractionState.ts  useLlmStream.ts  useSettings.tsx
tauri-app/src/lib/: favorites.ts  helpers.ts  json-repair.ts  llm.ts  searchUtils.ts  tauri.ts
tauri-app/src/pages/: CookingPage.tsx  InspirePage.tsx  ProfilePage.tsx  RecipesPage.tsx
tauri-app/src/state/: extractionReducer.ts
tauri-app/src/types/: recipe.ts  settings.ts
tests/: integration.rs
tests/testdata/: recipe_test.json  recipe_test.md
