[package]
name = "xhs-recipe"
version = "0.1.0"
edition = "2021"
description = "CLI tool to extract structured Chinese recipes from Xiaohongshu (RedNote) posts"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
zendriver = "0.2"
tempfile = "3"
base64 = "0.22"
colored = "2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2"
