[workspace]
members = [".", "server"]
exclude = ["tauri-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "xhs-recipe"
version.workspace = true
edition.workspace = true
description = "CLI tool to extract structured Chinese recipes from Xiaohongshu (RedNote) posts"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tempfile = "3"
colored = "2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "aac"] }
hound = "3"
