[project]
name = "xhs-recipe"
version = "0.1.0"
description = "从小红书链接提取菜谱的 CLI 工具"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "playwright>=1.40",
    "yt-dlp>=2024.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
all = ["xhs-recipe[transcribe]"]

[project.scripts]
xhs-recipe = "xhs_recipe.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xhs_recipe = ["py.typed"]
