[package]
name = "xhs-recipe-server"
version.workspace = true
edition.workspace = true

[dependencies]
xhs-recipe = { path = ".." }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tempfile = "3"
thiserror = "2"
