[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"
description = "LLM-based recipe extraction via function calling"

[dependencies]
models = { path = "../models" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
dotenvy = "0.15"
