[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for recipe extraction"

[[bin]]
name = "xhs-recipe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
models = { path = "../models" }
presentation = { path = "../presentation" }
pipeline = { path = "../pipeline" }
sources = { path = "../sources" }
