[package]
name = "sources"
version = "0.1.0"
edition = "2021"
description = "Source adapters for fetching content from various platforms"

[dependencies]
core = { path = "../core" }
tokio = { version = "1", features = ["process", "fs", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
playwright = { version = "0.13", package = "playwright-rs" }
