[package]
name = "textifier"
version = "0.1.0"
edition = "2021"
description = "Media-to-text processing: video download, audio extraction, transcription"

[dependencies]
core = { path = "../core" }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs"] }
tempfile = "3"
whisper-rs = { version = "0.16", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["whisper"]
whisper = ["whisper-rs", "reqwest"]
