[package]
name = "textifier"
version = "0.1.0"
edition = "2021"
description = "Media-to-text processing: video download, audio extraction, transcription"

[dependencies]
core = { path = "../core" }
tokio = { version = "1", features = ["process", "fs"] }
tempfile = "3"
whisper-rs = "0.16"
reqwest = { version = "0.12", features = ["blocking"] }
