[package]
name = "xhs-recipe-tauri"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
xhs-recipe = { path = "../.." }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
